--- a/config.toml
+++ b/config.toml
@@ -29,7 +29,7 @@ ignoreErrors = ["error-remote-getjson"]
     # whether to include Chinese/Japanese/Korean
     hasCJKLanguage = false
     # default amount of posts in each pages
-    paginate = 12
+    paginate = 100
     # [UA-XXXXXXXX-X] google analytics code
     googleAnalytics = ""
     # copyright description used only for seo schema
@@ -281,7 +281,7 @@ ignoreErrors = ["error-remote-getjson"]
   # Section (all posts) page config
   [params.section]
     # special amount of posts in each section page
-    paginate = 20
+    paginate = 1000
     # date format (month and day)
     dateFormat = "01-02"
     # amount of RSS pages
@@ -586,7 +586,7 @@ ignoreErrors = ["error-remote-getjson"]
 # Permalinks config (https://gohugo.io/content-management/urls/#permalinks)
 [Permalinks]
   # posts = ":year/:month/:filename"
-  posts = ":year/:filename"
+  posts = ":year/:slug"
 
 # Privacy config (https://gohugo.io/about/hugo-and-gdpr/)
 [privacy]
