Fix social URLs

--- a/config.toml
+++ b/config.toml
@@ -113,7 +113,7 @@ defaultContentLanguage = "en"           # Default language to use
     d-facebook = ""
     e-linkedin = ""
     f-google = ""
-    g-github = "http://localhost:1313"
+    g-github = "https://github.com/jackbaty"
     h-weibo = ""
     i-zhihu = ""
     j-douban = ""
@@ -121,7 +121,7 @@ defaultContentLanguage = "en"           # Default language to use
     l-tumblr = ""
     m-instagram = "https://instagram.com/mrjackbaty"
     n-gitlab = ""
-    o-goodreads = "http://localhost:1313"
+    o-goodreads = ""
     p-coding = ""
     q-bilibili = ""
     r-codeforces = ""
