--- a/config.toml
+++ b/config.toml
@@ -119,7 +119,7 @@ defaultContentLanguage = "en"           # Default language to use
     j-douban = ""
     k-pocket = ""
     l-tumblr = ""
-    m-instagram = "https://instagram.com/mrjackbaty"
+    m-instagram = "https://instagram.com/jackbatyphoto"
     n-gitlab = ""
     o-goodreads = ""
     p-coding = ""
