--- a/config.toml
+++ b/config.toml
@@ -72,7 +72,7 @@ defaultContentLanguage = "en"           # Default language to use
   rssFullContent = true     # if false, Rss feed instead of the summary
 
   # site info (optional)                                  # 站点信息（可选，不需要的可以直接注释掉）
-  logoTitle = "Jack baty"        # default: the title value    # 默认值: 上面设置的title值
+  logoTitle = "Jack Baty"        # default: the title value    # 默认值: 上面设置的title值
   keywords = ["Hugo", "theme","jane"]
   description = "Hugo theme jane example site."
 
